# immokalkul

./: .gitignore  CHANGELOG.md  README.md  REFERENCES.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: berlin_altbau.yaml  bonn_poppelsdorf.yaml  koeln_einfamilienhaus.yaml  munich_neubau.yaml
docs/: REFERENCES.md
docs/audits/UI/v1/: actionable_items.md  audit.md
docs/audits/UI/v2/: actionable_items.md  audit.md
docs/audits/finance/: research.md
docs/audits/finance/v1/: actionable_items.md  audit.md  germany_expansion.md
immokalkul/: __init__.py  affordability.py  capex.py  cashflow.py  financing.py  io.py  models.py  operating_costs.py  rules_de.py  tax.py
tests/: conftest.py  test_affordability.py  test_app_smoke.py  test_capex.py  test_engine.py  test_financing.py  test_fuzz_models.py  test_io.py  test_rules_de.py  test_yaml_noise.py
